# nao_ros_samples

./: README.md
nao_testbed/: CMakeLists.txt  package.xml
nao_testbed/include/nao_testbed/random_testing/: module.h
nao_testbed/include/nao_testbed/touch_and_talk/: module.h
nao_testbed/include/nao_testbed/track_face/: module.h
nao_testbed/include/nao_testbed/vocal_commands_posture_change/: module.h
nao_testbed/launch/: touch_and_talk.launch  track_face.launch  vocal_commands_posture_change.launch
nao_testbed/src/: main.cpp
nao_testbed/src/random_testing/: main.cpp  module.cpp
nao_testbed/src/touch_and_talk/: main.cpp  module.cpp
nao_testbed/src/track_face/: main.cpp  module.cpp
nao_testbed/src/vocal_commands_posture_change/: main.cpp  module.cpp
nao_utilities/: CMakeLists.txt  package.xml
nao_utilities/include/nao_utilities/: includes.h  nao_bumpers.h  nao_face_detection.h  nao_motion_controller.h  nao_speech.h
nao_utilities/src/: nao_bumpers.cpp  nao_face_detection.cpp  nao_motion_controller.cpp  nao_speech.cpp
nao_wakeup/: CMakeLists.txt  nao_face_detection.launch  nao_full.launch  nao_speech_wakeup.launch  package.xml
