<package>
  <name>nao_testbed</name>
  <version>0.0.1</version>
  
  <description>
      Showcases the use of NAO ROS utilities
  </description>
  
  <maintainer email="etsardou@gmail.com">Tsardoulias Manos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nao_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nao_utilities</run_depend>
</package>
