<package>
  <name>nao_utilities</name>
  <version>0.0.1</version>
  
  <description>
      Utilities and wrappers for using ROS with NAO.
  </description>
  
  <maintainer email="etsardou@gmail.com">Tsardoulias Manos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nao_description</run_depend>
  <run_depend>nao_driver</run_depend>
  <run_depend>nao_pose</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>

</package>
