<package>
  <name>nao_wakeup</name>
  <version>0.0.1</version>
  
  <description>
      Launch files and scripts needed to bring ROS interfaces for Nao up into a
      running state. CERTH version.
  </description>
  
  <maintainer email="etsardou@gmail.com">Severin Lemaignan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nao_description</run_depend>
  <run_depend>nao_driver</run_depend>
  <run_depend>nao_pose</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>

</package>
